test/should_not_compile/vector.sml
val empty = vector [];
val _ = empty = vector [123];
val _ = empty = vector ["foo"];
